# tetris

./: .gitignore  CMakeLists.txt  Dockerfile.Desktop  Dockerfile.Web  README.md
cmake/: toolchain-i686-w64-mingw32-windows.cmake  toolchain-x86_64-w64-mingw32-windows.cmake
restore/: prepare-ubuntu.sh
scripts/: build-i686-w64-mingw32-windows.sh  build-wasm-web.sh  build-x86_64-w64-mingw32-windows.sh  get-package-from-docker-container.sh
src/: main.c
src/base/: game.c  game.h  main.c
src/game/: CMakeLists.txt  common.h  game.c  game.h  tetrimino_definations.h
src/shared/: game_code.h  game_state.h  tetrimino.h
